--- a/hieu.html
+++ b/hieu.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hieu</p>
+    <p>Khanh Vu biuuuu</p>
     <p>Welcome to my website!</p>
 </body>
 </html>
