--- a/hieu.html
+++ b/hieu.html
@@ -9,5 +9,6 @@
     <p>Khanh Vu biuuuu</p>
     <p>Welcome to my website!</p>
     <p>Have a great day!</p>
+    <footer></footer>
 </body>
 </html>
